# rift

./: .env  .gitigonre  Dockerfile  README.md  alembic.ini  docker-compose.yml  nginx.conf  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
alembic/versions/: 001_initial.py
rift/api/: app.py  deps.py
rift/api/routes/: admin.py  auth.py  billing.py  jobs.py  videos.py
rift/core/: config.py  database.py  exceptions.py  schemas.py
rift/models/: __init__.py
rift/services/: audio.py  billing.py  effects.py  email.py  overlays.py  storage.py  upscaler.py  video.py
rift/web/static/: index.html
rift/web/static/css/: style.css
rift/web/static/js/: app.js
rift/worker/: celery.py  tasks.py
scripts/: seed_admin.py  setup.sh
